# archgw

./: .gitignore  README.md  build_filter_image.sh
.github/workflows/: arch_tools_tests.yml  e2e_archgw.yml  e2e_model_server.yml  e2e_test_currency_convert.yml  e2e_test_demos.yml  e2e_test_preference_based_routing.yml  ghrc-push-main.yml  ghrc-push-release.yml  rust_tests.yml  validate_arch_config.yml
arch/: Dockerfile  arch_config_schema.yaml  envoy.template.yaml  supervisord.conf  validate_arch_config.sh
arch/tools/: README.md  pyproject.toml
arch/tools/cli/: config_generator.py  consts.py  core.py  docker_cli.py  main.py  utils.py
arch/tools/test/: test_config_generator.py
crates/: Cargo.toml
crates/brightstaff/: Cargo.toml
crates/brightstaff/src/: lib.rs  main.rs
crates/brightstaff/src/handlers/: chat_completions.rs  mod.rs  models.rs  preferences.rs
crates/brightstaff/src/router/: llm_router.rs  mod.rs  router_model.rs  router_model_v1.rs
crates/brightstaff/src/utils/: tracing.rs
crates/common/: Cargo.toml
crates/common/src/: configuration.rs  consts.rs  errors.rs  lib.rs  llm_providers.rs  tokenizer.rs  utils.rs
crates/hermesllm/: Cargo.toml  README.md
crates/hermesllm/src/: lib.rs  mod.rs
crates/llm_gateway/: Cargo.toml
crates/llm_gateway/src/: stream_context.rs
crates/llm_gateway/tests/: integration.rs
crates/prompt_gateway/src/: http_context.rs  stream_context.rs
crates/prompt_gateway/tests/: integration.rs
demos/samples_java/weather_forcecast_service/: arch_config.yaml
demos/samples_python/currency_exchange/: arch_config.yaml
demos/use_cases/: README.md
docs/source/: conf.py  index.rst
model_server/: pyproject.toml
model_server/src/: cli.py
tests/archgw/: arch_config.yaml
tests/e2e/: run_e2e_tests.sh
tests/rest/: api_llm_gateway.rest
(+58 files in other folders)
